[package]
name = "dafont"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>", "Felipe Coury <felipe.coury@gmail.com"]
edition = "2018"
license = "MIT"
description = "Minimal dependency, pure-Rust alternative to font-loader and servo-fontconfig"
repository = "https://github.com/fcoury/dafont"
keywords = ["fontconfig", "font-loader", "font", "system-fonts"]
categories = ["gui"]
readme = "README.md"

[dependencies]
xmlparser = { version = "0.13.3", default-features = false }
rayon = { version = "1.5.0", default-features = false, optional = true }
allsorts = { version = "0.15.0", default-features = false, features = ["flate2_rust"], optional = true }
base64 = "0.22.1"

[target.'cfg(not(target_family="wasm"))'.dependencies]
mmapio = { version = "0.9.1", default-features = false, optional = true }

[features]
default = ["std", "parsing", "multithreading"]
std = ["mmapio"]
multithreading = ["rayon"]
parsing = ["allsorts"]
